fix: corregir error indicar que no se puede ejecutar desde explotacion script db

--- a/config/DB.ini
+++ b/config/DB.ini
@@ -1,8 +1,8 @@
 ; Data Bases
-db_host = 10.199.10.22
+; db_host = 10.199.10.22
+db_host = localhost
 
 ; admin
-db_name_root = mi_base
 db_user_root = adminsql
 db_pass_root = paso
 
